Refactor payment method selection